ci(harness): cover file transfer failure paths